// Qvorka - ERD схема базы данных
// Вставить на dbdiagram.io

Table users {
  id serial [primary key]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  role varchar(20) [not null, note: 'client | freelancer | admin']
  full_name varchar(255) [not null]
  avatar_url varchar(500)
  bio text
  is_email_confirmed boolean [default: false]
  is_verified boolean [default: false]
  is_blocked boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table freelancer_profiles {
  id serial [primary key]
  user_id integer [not null, unique]
  specialization varchar(255)
  rating decimal(3,2) [default: 0.00]
  completed_orders_count integer [default: 0]
  portfolio_url varchar(500)
  updated_at timestamp
}

Table categories {
  id serial [primary key]
  name varchar(100) [not null]
  slug varchar(100) [not null, unique]
  parent_id integer [note: 'null - корневая категория']
}

Table services {
  id serial [primary key]
  freelancer_id integer [not null]
  category_id integer [not null]
  title varchar(255) [not null]
  description text
  status varchar(20) [not null, note: 'draft | pending | published | rejected']
  rejection_reason text
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table service_packages {
  id serial [primary key]
  service_id integer [not null]
  name varchar(100) [not null]
  description text
  price integer [not null, note: 'в копейках']
  delivery_days integer [not null]
  revisions_count integer [not null, default: 1]
}

Table service_tags {
  id serial [primary key]
  service_id integer [not null]
  tag varchar(50) [not null]
}

Table orders {
  id serial [primary key]
  service_id integer [not null]
  package_id integer [not null]
  client_id integer [not null]
  freelancer_id integer [not null]
  status varchar(20) [not null, note: 'in_progress | in_review | completed | cancelled | dispute']
  requirements text
  total_price integer [not null, note: 'в копейках']
  commission_amount integer [not null, note: 'в копейках']
  revisions_used integer [default: 0]
  deadline_at timestamp
  completed_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table messages {
  id serial [primary key]
  order_id integer [not null]
  sender_id integer [not null]
  content text
  created_at timestamp [default: `now()`]
}

Table message_attachments {
  id serial [primary key]
  message_id integer [not null]
  file_url varchar(500) [not null]
  file_name varchar(255)
  file_size integer [note: 'в байтах']
}

Table reviews {
  id serial [primary key]
  order_id integer [not null]
  reviewer_id integer [not null]
  reviewee_id integer [not null]
  rating smallint [not null, note: '1-5']
  comment text
  created_at timestamp [default: `now()`]
}

Table disputes {
  id serial [primary key]
  order_id integer [not null]
  initiator_id integer [not null]
  moderator_id integer
  reason text [not null]
  status varchar(20) [not null, note: 'open | resolved']
  resolution text
  created_at timestamp [default: `now()`]
  resolved_at timestamp
}

Table wallets {
  id serial [primary key]
  user_id integer [not null, unique]
  balance integer [not null, default: 0, note: 'в копейках']
  updated_at timestamp
}

Table transactions {
  id serial [primary key]
  wallet_id integer [not null]
  order_id integer
  type varchar(20) [not null, note: 'payment | earning | withdrawal | refund']
  amount integer [not null, note: 'в копейках']
  created_at timestamp [default: `now()`]
}

Table withdrawals {
  id serial [primary key]
  user_id integer [not null]
  amount integer [not null, note: 'в копейках']
  card_last4 varchar(4)
  status varchar(20) [not null, note: 'pending | completed | rejected']
  created_at timestamp [default: `now()`]
  processed_at timestamp
}

Table service_images {
  id serial [primary key]
  service_id integer [not null]
  url varchar(500) [not null]
  position integer [not null, default: 0, note: 'порядок отображения']
}

Table notifications {
  id serial [primary key]
  user_id integer [not null]
  type varchar(50) [not null, note: 'new_order | work_submitted | revision_requested | order_completed | dispute_opened | dispute_resolved']
  title varchar(255) [not null]
  body text
  is_read boolean [not null, default: false]
  related_order_id integer
  created_at timestamp [default: `now()`]
}

Table order_status_history {
  id serial [primary key]
  order_id integer [not null]
  status varchar(20) [not null]
  changed_by integer [not null, note: 'user_id того, кто инициировал смену статуса']
  comment text
  created_at timestamp [default: `now()`]
}

// Связи

Ref: freelancer_profiles.user_id > users.id
Ref: categories.parent_id > categories.id
Ref: services.freelancer_id > users.id
Ref: services.category_id > categories.id
Ref: service_packages.service_id > services.id
Ref: service_tags.service_id > services.id
Ref: orders.service_id > services.id
Ref: orders.package_id > service_packages.id
Ref: orders.client_id > users.id
Ref: orders.freelancer_id > users.id
Ref: messages.order_id > orders.id
Ref: messages.sender_id > users.id
Ref: message_attachments.message_id > messages.id
Ref: reviews.order_id > orders.id
Ref: reviews.reviewer_id > users.id
Ref: reviews.reviewee_id > users.id
Ref: disputes.order_id > orders.id
Ref: disputes.initiator_id > users.id
Ref: disputes.moderator_id > users.id
Ref: wallets.user_id > users.id
Ref: transactions.wallet_id > wallets.id
Ref: transactions.order_id > orders.id
Ref: withdrawals.user_id > users.id
Ref: service_images.service_id > services.id
Ref: notifications.user_id > users.id
Ref: notifications.related_order_id > orders.id
Ref: order_status_history.order_id > orders.id
Ref: order_status_history.changed_by > users.id
